fix: fix footer logo alignment

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,6 +1,10 @@
 .justify-evenly {
   justify-content: space-evenly;
 }
+.mr-6 {
+  margin-right: 6rem;
+}
+
 .footer {
   padding: 10rem 0 5rem 0 ;
   border-top: .25px solid $opaque-black;
@@ -15,6 +19,12 @@
   .logo2 {
     width: 4rem;
     height: auto;
+  }
+  .logo3 {
+    width: 5rem;
+    height: auto;
+    margin-top: .3rem;
+    margin-right: -0.7rem;
   }
   a {
     text-decoration: none;
@@ -48,6 +58,9 @@
     }
     h4 {
       font-size: 1.9rem;
+    }
+    .mr-6 {
+      margin-right: 1rem;
     }
   }
 }
@@ -85,12 +98,22 @@
 }
 
 @media (max-width: 430px) {
+  .mr-6 {
+    margin-right: .4rem;
+  }
   .footer {
     h2 {
       font-size: 1.6rem;
     }
     h4 {
       font-size: 1.3rem;
+    }
+    .logo2 {
+      width: 2.5rem;
+    }
+    .logo3 {
+      width: 3rem;
+      margin-top: .1rem;
     }
   }
 }
